[package]
name = "filia_s3"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
chrono = "0.4.42"
serde = { version = "1.0.228" ,features = ["derive"] }
serde_json = "1.0.145"
socket2 = "0.6.1"
sqlx = "0.8.6"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version="0.3.22", features = ["env-filter"]}
